--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,10 @@ name: Python package
 
 on:
   push:
-    branches: [ master, develop ]
+    tags: [ master ]
+
   pull_request:
-    branches: [ master, develop ]
+    branches: [ develop ]
 
 jobs:
   build:
