--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: fsc-lib
+name: tf-fs
 channels:
   - defaults
   - conda-forge
@@ -6,3 +6,4 @@ dependencies:
   - python=3.7
   - pytest==5.4.3
   - sphinx==3.1.1
+  - matplotlib==3.3.0
