--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - pytest==5.4.3
   - sphinx==3.1.1
   - matplotlib==3.3.0
+  - numpy==1.19.1
   - pip==20.1.1
   - pip:
       - tensorflow==2.2.0
