--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,7 +35,14 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - uses: goanpeca/setup-miniconda@v1
+      with:
+        auto-activate-base: false
+        environment-file: environment.yml
+        python-version: ${{ matrix.python-version }}
+        activate-environment: tf-fs
     - name: Test with unittest
+      shell: bash -l {0}
       run: |
         python -m unittest
     - name: Build package
