--- a/.github/workflows/python-package-test.yml
+++ b/.github/workflows/python-package-test.yml
@@ -1,11 +1,11 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Python package test
 
 on:
   push:
-    tags: 'v*.*.*'
+    tags: 'd*.*.*'
 
 jobs:
   build:
@@ -46,9 +46,10 @@ jobs:
       run: |
         python3 -m pip install --user --upgrade setuptools wheel
         python3 setup.py sdist bdist_wheel
-    - name: Publish package on PyPI
-      if: github.ref == 'refs/heads/master'
-      uses: pypa/gh-action-pypi-publish@master
+    - name: Publish package on test PyPI
+      if: github.ref == 'refs/heads/develop'
+      uses: pypa/gh-action-pypi-publish@develop
       with:
         user: __token__
-        password: ${{ secrets.pypi_password }}
+        password: ${{ secrets.testpypi_password }}
+        repository_url: https://test.pypi.org/legacy/
