--- a/.github/workflows/python-package-test.yml
+++ b/.github/workflows/python-package-test.yml
@@ -48,7 +48,7 @@ jobs:
         python3 setup.py sdist bdist_wheel
     - name: Publish package on test PyPI
       if: github.ref == 'refs/heads/develop'
-      uses: pypa/gh-action-pypi-publish@develop
+      uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
         password: ${{ secrets.testpypi_password }}
